--- a/02.前缀和与差分/02.02一维动态前缀和（单修区查）.md
+++ b/02.前缀和与差分/02.02一维动态前缀和（单修区查）.md
@@ -165,6 +165,67 @@ int countRangeSum(vector<int>& nums, int lower, int upper) {
 }
 ```
 
+``` java []
+public int countRangeSum(int[] nums, int lower, int upper) {
+    int n = nums.length;
+    long[] sums = new long[n + 1];
+    for (int i = 0; i < n; i++) {
+        sums[i + 1] = sums[i] + nums[i];
+    }
+    
+    TreeSet<Long> allNums = new TreeSet<>();
+    for (long sum : sums) {
+        allNums.add(sum);
+        allNums.add(sum - lower);
+        allNums.add(sum - upper);
+    }
+    
+    // 离散化
+    Map<Long, Integer> ranks = new HashMap<>();
+    int rank = 0;
+    for (long num : allNums) {
+        ranks.put(num, ++rank);
+    }
+    
+    int result = 0;
+    BIT bit = new BIT(ranks.size());
+    
+    for (long sum : sums) {
+        result += bit.rangeSum(ranks.get(sum - upper), ranks.get(sum - lower));
+        bit.update(ranks.get(sum), 1);
+    }
+    
+    return result;
+}
+```
+
+``` python []
+def countRangeSum(self, nums: List[int], lower: int, upper: int) -> int:
+    n = len(nums)
+    sums = [0] * (n + 1)
+    for i in range(n):
+        sums[i + 1] = sums[i] + nums[i]
+    
+    # 收集所有可能的数值
+    all_nums = set()
+    for sum_val in sums:
+        all_nums.add(sum_val)
+        all_nums.add(sum_val - lower)
+        all_nums.add(sum_val - upper)
+    
+    # 离散化
+    ranks = {num: rank for rank, num in enumerate(sorted(all_nums), 1)}
+    
+    result = 0
+    bit = BIT(len(ranks))
+    
+    for sum_val in sums:
+        result += bit.range_sum(ranks[sum_val - upper], ranks[sum_val - lower])
+        bit.update(ranks[sum_val], 1)
+    
+    return result
+```
+
 ## 时间复杂度
 
 - 初始化：$\mathcal{O}(n)$
