--- a/02.前缀和与差分/02.03一维动态前缀和（区修区查）.md
+++ b/02.前缀和与差分/02.03一维动态前缀和（区修区查）.md
@@ -232,6 +232,49 @@ public:
 };
 ```
 
+``` java []
+class Solution {
+    private SegmentTree st;
+    
+    public int[] getModifiedArray(int length, int[][] updates) {
+        st = new SegmentTree(length);
+        
+        // 执行所有更新操作
+        for (int[] update : updates) {
+            int start = update[0];
+            int end = update[1];
+            int val = update[2];
+            st.update(0, 0, length-1, start, end, val);
+        }
+        
+        // 查询每个位置的值
+        int[] result = new int[length];
+        for (int i = 0; i < length; i++) {
+            result[i] = st.query(0, 0, length-1, i, i);
+        }
+        
+        return result;
+    }
+}
+```
+
+``` python []
+class Solution:
+    def getModifiedArray(self, length: int, updates: List[List[int]]) -> List[int]:
+        st = SegmentTree(length)
+        
+        # 执行所有更新操作
+        for start, end, val in updates:
+            st.update(0, 0, length-1, start, end, val)
+        
+        # 查询每个位置的值
+        result = []
+        for i in range(length):
+            result.append(st.query(0, 0, length-1, i, i))
+        
+        return result
+```
+
 ## 时间复杂度
 
 - 初始化：$\mathcal{O}(n)$
