--- a/02.前缀和与差分/02.05二维动态前缀和（单修区查）.md
+++ b/02.前缀和与差分/02.05二维动态前缀和（单修区查）.md
@@ -180,6 +180,61 @@ public:
 };
 ```
 
+``` java []
+class NumMatrix {
+    private BIT2D bit;
+    private int[][] matrix;
+    
+    public NumMatrix(int[][] matrix) {
+        if (matrix == null || matrix.length == 0 || matrix[0].length == 0) return;
+        this.matrix = new int[matrix.length][matrix[0].length];
+        int m = matrix.length, n = matrix[0].length;
+        bit = new BIT2D(m, n);
+        
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                this.matrix[i][j] = matrix[i][j];
+                bit.update(i, j, matrix[i][j]);
+            }
+        }
+    }
+    
+    public void update(int row, int col, int val) {
+        int delta = val - matrix[row][col];
+        matrix[row][col] = val;
+        bit.update(row, col, delta);
+    }
+    
+    public int sumRegion(int row1, int col1, int row2, int col2) {
+        return bit.sumRegion(row1, col1, row2, col2);
+    }
+}
+```
+
+``` python []
+class NumMatrix:
+    def __init__(self, matrix: List[List[int]]):
+        if not matrix or not matrix[0]:
+            return
+        self.matrix = [[0] * len(matrix[0]) for _ in range(len(matrix))]
+        m, n = len(matrix), len(matrix[0])
+        self.bit = BIT2D(m, n)
+        
+        for i in range(m):
+            for j in range(n):
+                self.matrix[i][j] = matrix[i][j]
+                self.bit.update(i, j, matrix[i][j])
+    
+    def update(self, row: int, col: int, val: int) -> None:
+        delta = val - self.matrix[row][col]
+        self.matrix[row][col] = val
+        self.bit.update(row, col, delta)
+    
+    def sumRegion(self, row1: int, col1: int, row2: int, col2: int) -> int:
+        return self.bit.sum_region(row1, col1, row2, col2)
+```
+
+
 ## 时间复杂度
 
 - 初始化：$\mathcal{O}(m \cdot n \cdot \log m \cdot \log n)$
