--- a/02.前缀和与差分/02.06一维静态差分.md
+++ b/02.前缀和与差分/02.06一维静态差分.md
@@ -142,6 +142,36 @@ vector<int> corpFlightBookings(vector<vector<int>>& bookings, int n) {
 }
 ```
 
+``` java []
+public int[] corpFlightBookings(int[][] bookings, int n) {
+    int[] nums = new int[n];
+    Difference diff = new Difference(nums);
+    
+    // 处理所有预订
+    for (int[] booking : bookings) {
+        int first = booking[0] - 1;
+        int last = booking[1] - 1;
+        int seats = booking[2];
+        diff.increment(first, last, seats);
+    }
+    
+    return diff.result();
+}
+```
+
+``` python []
+def corpFlightBookings(self, bookings: List[List[int]], n: int) -> List[int]:
+    nums = [0] * n
+    diff = Difference(nums)
+    
+    # 处理所有预订
+    for first, last, seats in bookings:
+        # 转换为0-based索引
+        diff.increment(first - 1, last - 1, seats)
+    
+    return diff.result()
+```
+
 ## 时间复杂度
 
 - 构建差分数组：$\mathcal{O}(n)$
