--- a/02.前缀和与差分/02.07一维动态差分（区修单查）.md
+++ b/02.前缀和与差分/02.07一维动态差分（区修单查）.md
@@ -178,6 +178,49 @@ public:
 };
 ```
 
+``` java []
+class Solution {
+    private DynamicDifference dd;
+    
+    public int[] getModifiedArray(int length, int[][] updates) {
+        dd = new DynamicDifference(length);
+        
+        // 执行所有更新操作
+        for (int[] update : updates) {
+            int start = update[0];
+            int end = update[1];
+            int val = update[2];
+            dd.rangeAdd(start, end, val);
+        }
+        
+        // 查询每个位置的值
+        int[] result = new int[length];
+        for (int i = 0; i < length; i++) {
+            result[i] = dd.pointQuery(i);
+        }
+        
+        return result;
+    }
+}
+```
+
+``` python []
+class Solution:
+    def getModifiedArray(self, length: int, updates: List[List[int]]) -> List[int]:
+        dd = DynamicDifference(length)
+        
+        # 执行所有更新操作
+        for start, end, val in updates:
+            dd.range_add(start, end, val)
+        
+        # 查询每个位置的值
+        result = []
+        for i in range(length):
+            result.append(dd.point_query(i))
+        
+        return result
+```
+
 ## 时间复杂度
 
 - 初始化：$\mathcal{O}(n)$
