--- a/02.前缀和与差分/02.08二维静态差分.md
+++ b/02.前缀和与差分/02.08二维静态差分.md
@@ -170,6 +170,34 @@ vector<vector<int>> getModifiedMatrix(vector<vector<int>>& matrix,
 }
 ```
 
+``` java []
+public int[][] getModifiedMatrix(int[][] matrix, int[][] operations) {
+    Difference2D diff = new Difference2D(matrix);
+    
+    // 执行所有更新操作
+    for (int[] op : operations) {
+        int x1 = op[0], y1 = op[1];
+        int x2 = op[2], y2 = op[3];
+        int val = op[4];
+        diff.increment(x1, y1, x2, y2, val);
+    }
+    
+    return diff.result();
+}
+```
+
+``` python []
+def getModifiedMatrix(self, matrix: List[List[int]], operations: List[List[int]]) -> List[List[int]]:
+    diff = Difference2D(matrix)
+    
+    # 执行所有更新操作
+    for x1, y1, x2, y2, val in operations:
+        diff.increment(x1, y1, x2, y2, val)
+    
+    return diff.result()
+```
+
+
 ## 时间复杂度
 
 - 构建差分数组：$\mathcal{O}(mn)$
