--- a/02.前缀和与差分/02.09二维动态差分（区修单查）.md
+++ b/02.前缀和与差分/02.09二维动态差分（区修单查）.md
@@ -202,6 +202,55 @@ public:
 };
 ```
 
+``` java []
+class Solution {
+    private DynamicDifference2D dd;
+    
+    public int[][] getModifiedMatrix(int[][] matrix, int[][] operations) {
+        int m = matrix.length, n = matrix[0].length;
+        dd = new DynamicDifference2D(m, n);
+        
+        // 执行所有更新操作
+        for (int[] op : operations) {
+            int x1 = op[0], y1 = op[1];
+            int x2 = op[2], y2 = op[3];
+            int val = op[4];
+            dd.rangeAdd(x1, y1, x2, y2, val);
+        }
+        
+        // 查询每个位置的值
+        int[][] result = new int[m][n];
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                result[i][j] = dd.pointQuery(i, j);
+            }
+        }
+        
+        return result;
+    }
+}
+```
+
+``` python []
+class Solution:
+    def getModifiedMatrix(self, matrix: List[List[int]], operations: List[List[int]]) -> List[List[int]]:
+        m, n = len(matrix), len(matrix[0])
+        dd = DynamicDifference2D(m, n)
+        
+        # 执行所有更新操作
+        for x1, y1, x2, y2, val in operations:
+            dd.range_add(x1, y1, x2, y2, val)
+        
+        # 查询每个位置的值
+        result = [[0] * n for _ in range(m)]
+        for i in range(m):
+            for j in range(n):
+                result[i][j] = dd.point_query(i, j)
+        
+        return result
+```
+
+
 ## 时间复杂度
 
 - 初始化：$\mathcal{O}(mn)$
