--- a/02.前缀和与差分/02.04二维静态前缀和.md
+++ b/02.前缀和与差分/02.04二维静态前缀和.md
@@ -142,6 +142,69 @@ int maximalSquare(vector<vector<char>>& matrix) {
 }
 ```
 
+``` java []
+public int maximalSquare(char[][] matrix) {
+    if (matrix == null || matrix.length == 0 || matrix[0].length == 0) return 0;
+    int m = matrix.length, n = matrix[0].length;
+    int[][] prefix = new int[m + 1][n + 1];
+    
+    // 计算二维前缀和
+    for (int i = 1; i <= m; i++) {
+        for (int j = 1; j <= n; j++) {
+            prefix[i][j] = prefix[i-1][j] + prefix[i][j-1] - prefix[i-1][j-1]
+                          + (matrix[i-1][j-1] - '0');
+        }
+    }
+    
+    int maxSide = 0;
+    // 枚举所有可能的正方形
+    for (int i = 1; i <= m; i++) {
+        for (int j = 1; j <= n; j++) {
+            for (int k = maxSide + 1; k <= Math.min(i, j); k++) {
+                int sum = prefix[i][j] - prefix[i-k][j] - prefix[i][j-k]
+                         + prefix[i-k][j-k];
+                if (sum == k * k) {
+                    maxSide = k;
+                } else {
+                    break;
+                }
+            }
+        }
+    }
+    
+    return maxSide * maxSide;
+}
+```
+
+``` python []
+def maximalSquare(self, matrix: List[List[str]]) -> int:
+    if not matrix or not matrix[0]:
+        return 0
+    
+    m, n = len(matrix), len(matrix[0])
+    prefix = [[0] * (n + 1) for _ in range(m + 1)]
+    
+    # 计算二维前缀和
+    for i in range(1, m + 1):
+        for j in range(1, n + 1):
+            prefix[i][j] = (prefix[i-1][j] + prefix[i][j-1] - 
+                          prefix[i-1][j-1] + int(matrix[i-1][j-1]))
+    
+    max_side = 0
+    # 枚举所有可能的正方形
+    for i in range(1, m + 1):
+        for j in range(1, n + 1):
+            for k in range(max_side + 1, min(i, j) + 1):
+                sum_val = (prefix[i][j] - prefix[i-k][j] - 
+                         prefix[i][j-k] + prefix[i-k][j-k])
+                if sum_val == k * k:
+                    max_side = k
+                else:
+                    break
+    
+    return max_side * max_side
+```
+
 ## 时间复杂度
 
 - 预处理：$\mathcal{O}(m \cdot n)$
