--- a/02.前缀和与差分/02.00前缀和与差分.md
+++ b/02.前缀和与差分/02.00前缀和与差分.md
@@ -2,6 +2,15 @@
 
 ## 前缀和
 
+前缀和是一种预处理技术，用于快速计算数组或矩阵中某个区间或区域的元素之和。
+
+### 特点
+1. 预处理时间：$\mathcal{O}(n)$ 或 $\mathcal{O}(m \cdot n)$
+2. 查询时间：$\mathcal{O}(1)$
+3. 适用于频繁查询区间和的场景
+
+### 分类
+
 |算法|问题描述|数据结构|
 |:-:|:-:|:-:|
 |一维静态前缀和|无修改区间查询|一维数组|
@@ -12,9 +21,38 @@
 
 ## 差分
 
+差分是前缀和的逆运算，主要用于处理区间增减的操作。
+
+### 特点
+1. 区间修改时间：$\mathcal{O}(1)$
+2. 单点查询时间：需要还原数组，$\mathcal{O}(n)$
+3. 适用于频繁进行区间修改的场景
+
+### 分类
+
 |算法|问题描述|数据结构|
 |:-:|:-:|:-:|
 |一维静态差分|区间修改一次查询|一维数组|
 |一维动态差分|区间修改单点查询|一维树状数组|
 |二维静态差分|区间修改一次查询|二维数组|
 |二维动态差分|区间修改单点查询|二维树状数组|
+
+### 应用场景对比
+
+前缀和适合：
+1. 频繁查询区间和
+2. 数据不经常变化
+3. 需要快速的区间查询
+
+差分适合：
+1. 频繁进行区间增减操作
+2. 数据经常变化
+3. 最终只需要得到修改后的结果
+
+### 选择建议
+
+1. 如果查询操作远多于修改操作，选择前缀和
+2. 如果修改操作远多于查询操作，选择差分
+3. 如果修改和查询都很频繁，考虑动态方案（树状数组/线段树）
+4. 如果空间有限，优先考虑一维解法
+
