--- a/03.贪心/03.02_区间最少点覆盖.md
+++ b/03.贪心/03.02_区间最少点覆盖.md
@@ -12,8 +12,7 @@
 
 ## 算法实现
 
-### C++ 实现
-```cpp
+``` c++ []
 class Solution {
 public:
     int findMinArrowShots(vector<vector<int>>& points) {
@@ -39,8 +38,7 @@ public:
 };
 ```
 
-### Java 实现
-```java
+``` java []
 class Solution {
     public int findMinArrowShots(int[][] points) {
         if (points == null || points.length == 0) return 0;
@@ -70,8 +68,7 @@ class Solution {
 }
 ```
 
-### Python 实现
-```python
+``` python []
 class Solution:
     def findMinArrowShots(self, points: List[List[int]]) -> int:
         if not points:
