--- a/03.贪心/03.03_排队等待.md
+++ b/03.贪心/03.03_排队等待.md
@@ -25,8 +25,7 @@
 
 ## 算法实现
 
-### C++ 实现
-```cpp
+``` c++ []
 class Solution {
 public:
     vector<int> minWaitingTime(vector<int>& times, vector<int>& costs) {
@@ -52,8 +51,7 @@ public:
 };
 ```
 
-### Java 实现
-```java
+``` java []
 class Solution {
     public int[] minWaitingTime(int[] times, int[] costs) {
         int n = times.length;
@@ -76,8 +74,7 @@ class Solution {
 }
 ```
 
-### Python 实现
-```python
+``` python []
 class Solution:
     def minWaitingTime(self, times: List[int], costs: List[int]) -> List[int]:
         n = len(times)
