--- a/03.贪心/03.04_邮局选址.md
+++ b/03.贪心/03.04_邮局选址.md
@@ -18,8 +18,7 @@
 
 ## 算法实现
 
-### C++ 实现
-```cpp
+``` c++ []
 int solve(vector<int>& points) {
     int n = points.size();
     // 排序
@@ -49,8 +48,7 @@ int minTotalDistance(vector<vector<int>>& points) {
 }
 ```
 
-### Java 实现
-```java
+``` java []
 class Solution {
     private int solve(int[] points) {
         Arrays.sort(points);
@@ -78,8 +76,7 @@ class Solution {
 }
 ```
 
-### Python 实现
-```python
+``` python []
 class Solution:
     def solve(self, points: List[int]) -> int:
         points.sort()
