--- a/05.字符串/05.00_字符串.md
+++ b/05.字符串/05.00_字符串.md
@@ -1,1 +1,102 @@
 # 字符串
+
+## 字符串匹配
+
+字符串匹配是在文本串中查找模式串出现位置的过程。
+
+### 特点
+1. 预处理时间：$\mathcal{O}(m)$ 或 $\mathcal{O}(m+\Sigma)$，其中 $m$ 是模式串长度，$\Sigma$ 是字符集大小
+2. 匹配时间：从 $\mathcal{O}(n \cdot m)$ 到 $\mathcal{O}(n+m)$ 不等
+3. 适用于文本搜索、生物序列比对等场景
+
+### 分类
+
+|算法|时间复杂度|空间复杂度|特点|
+|:-:|:-:|:-:|:-:|
+|朴素匹配|$\mathcal{O}(n \cdot m)$|$\mathcal{O}(1)$|简单直观|
+|KMP|$\mathcal{O}(n+m)$|$\mathcal{O}(m)$|线性时间|
+|Sunday|$\mathcal{O}(n \cdot m)$|$\mathcal{O}(\Sigma)$|实际效率高|
+|Boyer-Moore|$\mathcal{O}(n \cdot m)$|$\mathcal{O}(\Sigma)$|从右向左匹配|
+|AC自动机|$\mathcal{O}(n+\sum m_i)$|$\mathcal{O}(\sum m_i)$|多模式匹配|
+
+## 字符串哈希
+
+字符串哈希是将字符串映射为整数的技术。
+
+### 特点
+1. 预处理时间：$\mathcal{O}(n)$
+2. 查询时间：$\mathcal{O}(1)$
+3. 适用于快速字符串比较和子串查询
+
+### 分类
+
+|算法|问题描述|特点|
+|:-:|:-:|:-:|
+|单哈希|使用单个哈希值|实现简单，可能冲突|
+|双哈希|使用两个哈希值|冲突概率极低|
+|滚动哈希|动态维护哈希值|适用于滑动窗口|
+
+## 字典树
+
+字典树（Trie）是一种用于高效存储和查找字符串的树形数据结构。
+
+### 特点
+1. 插入/查找时间：$\mathcal{O}(L)$，其中 $L$ 是字符串长度
+2. 空间复杂度：$\mathcal{O}(n \cdot \Sigma)$
+3. 适用于前缀统计、字符串集合维护等场景
+
+### 分类
+
+|算法|问题描述|特点|
+|:-:|:-:|:-:|
+|普通字典树|字符串集合维护|空间占用大|
+|压缩字典树|合并单链节点|节省空间|
+|AC自动机|多模式匹配|结合KMP思想|
+
+## 回文串
+
+回文串是正反读都相同的字符串。
+
+### 特点
+1. 判断时间：$\mathcal{O}(n)$
+2. 预处理时间：$\mathcal{O}(n)$（Manacher算法）
+3. 适用于回文串查找、统计等场景
+
+### 分类
+
+|算法|问题描述|时间复杂度|
+|:-:|:-:|:-:|
+|中心扩展|查找最长回文子串|$\mathcal{O}(n^2)$|
+|Manacher|查找最长回文子串|$\mathcal{O}(n)$|
+|动态规划|统计回文子串个数|$\mathcal{O}(n^2)$|
+
+### 应用场景对比
+
+字符串匹配适合：
+1. 文本搜索和替换
+2. 生物序列比对
+3. 网络入侵检测
+
+字符串哈希适合：
+1. 快速字符串比较
+2. 子串查询
+3. 字符串去重
+
+字典树适合：
+1. 前缀统计
+2. 自动补全
+3. 字符串集合维护
+
+回文串算法适合：
+1. 最长回文子串查找
+2. 回文子序列统计
+3. 文本特征分析
+
+### 选择建议
+
+1. 单模式匹配选择KMP
+2. 多模式匹配选择AC自动机
+3. 需要快速比较子串选择字符串哈希
+4. 维护字符串集合选择字典树
+5. 处理回文串选择Manacher算法
+
