--- a/09.图论/09.00_图论.md
+++ b/09.图论/09.00_图论.md
@@ -1,1 +1,83 @@
 # 图论
+
+## 基础图论
+
+基础图论包含了处理图的基本算法和遍历方式。
+
+### 特点
+1. 时间复杂度：从 $\mathcal{O}(V+E)$ 到 $\mathcal{O}(V^2)$ 不等
+2. 空间复杂度：通常为 $\mathcal{O}(V+E)$ 或 $\mathcal{O}(V^2)$
+3. 适用于网络、路径、连通性等问题
+
+### 分类
+
+|算法|问题描述|时间复杂度|
+|:-:|:-:|:-:|
+|DFS|深度优先搜索|$\mathcal{O}(V+E)$|
+|BFS|广度优先搜索|$\mathcal{O}(V+E)$|
+|拓扑排序|有向无环图排序|$\mathcal{O}(V+E)$|
+|强连通分量|有向图连通性|$\mathcal{O}(V+E)$|
+
+## 最短路径
+
+最短路径算法用于求解图中两点间的最短距离。
+
+### 特点
+1. 时间复杂度：从 $\mathcal{O}(V+E)$ 到 $\mathcal{O}(V^3)$ 不等
+2. 空间复杂度：通常为 $\mathcal{O}(V^2)$ 或 $\mathcal{O}(V+E)$
+3. 适用于路径规划、网络流量等问题
+
+### 分类
+
+|算法|问题描述|特点|
+|:-:|:-:|:-:|
+|Dijkstra|单源最短路|非负权值|
+|Bellman-Ford|单源最短路|可处理负权|
+|Floyd|多源最短路|动态规划|
+|SPFA|单源最短路|队列优化|
+
+## 生成树
+
+生成树算法用于求解图的最小生成树。
+
+### 特点
+1. 时间复杂度：通常为 $\mathcal{O}(E \log V)$
+2. 空间复杂度：通常为 $\mathcal{O}(V+E)$
+3. 适用于网络设计、电路布线等问题
+
+### 分类
+
+|算法|问题描述|特点|
+|:-:|:-:|:-:|
+|Kruskal|最小生成树|基于边排序|
+|Prim|最小生成树|基于点生长|
+|Boruvka|最小生成树|并行处理|
+|次小生成树|次优解问题|替换边法|
+
+## 应用场景对比
+
+基础图论适合：
+1. 图的遍历
+2. 连通性判断
+3. 环路检测
+4. 拓扑序列
+
+最短路径适合：
+1. 导航系统
+2. 网络路由
+3. 社交网络
+4. 资源调度
+
+生成树适合：
+1. 网络设计
+2. 电路布线
+3. 集群连接
+4. 成本优化
+
+### 选择建议
+
+1. 遍历问题选择DFS/BFS
+2. 单点路径选择Dijkstra
+3. 全局路径选择Floyd
+4. 最小代价选择Kruskal/Prim
+5. 负权边选择Bellman-Ford
